crates/parser/src/tests/snapshots/kcl_parser__tests__expr__binary_expr_3.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"a or b\"####)"
---
Node {
    node: Binary(
        BinaryExpr {
            left: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            Node {
                                node: "a",
                                filename: "",
                                line: 1,
                                column: 0,
                                end_line: 1,
                                end_column: 1,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            op: Or,
            right: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            Node {
                                node: "b",
                                filename: "",
                                line: 1,
                                column: 5,
                                end_line: 1,
                                end_column: 6,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 5,
                end_line: 1,
                end_column: 6,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}
