crates/parser/src/tests/snapshots/kcl_parser__tests__expr__binary_expr_9.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"1 is 1 and 11 is not 22\"####)"
---
Node {
    node: Binary(
        BinaryExpr {
            left: Node {
                node: Compare(
                    Compare {
                        left: Node {
                            node: NumberLit(
                                NumberLit {
                                    binary_suffix: None,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                        ops: [
                            Is,
                        ],
                        comparators: [
                            Node {
                                node: NumberLit(
                                    NumberLit {
                                        binary_suffix: None,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 5,
                                end_line: 1,
                                end_column: 6,
                            },
                        ],
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 23,
            },
            op: And,
            right: Node {
                node: Compare(
                    Compare {
                        left: Node {
                            node: NumberLit(
                                NumberLit {
                                    binary_suffix: None,
                                    value: Int(
                                        11,
                                    ),
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 11,
                            end_line: 1,
                            end_column: 13,
                        },
                        ops: [
                            IsNot,
                        ],
                        comparators: [
                            Node {
                                node: NumberLit(
                                    NumberLit {
                                        binary_suffix: None,
                                        value: Int(
                                            22,
                                        ),
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 21,
                                end_line: 1,
                                end_column: 23,
                            },
                        ],
                    },
                ),
                filename: "",
                line: 1,
                column: 11,
                end_line: 1,
                end_column: 23,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 23,
}
